--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pyttsx3
-python-dotenv
-openai
+pyttsx3==2.90
+python-dotenv==1.0.0
+openai==1.2.3
 speechrecognition
-PyAudio
-unstructured
+PyAudio==0.2.14
+unstructured==0.10.30
